# Python-API-Framework

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt  setup.py
py_api_framework/: __init__.py  auth.py  cli.py  config.py  database.py  main.py  models.py  schemas.py
py_api_framework/routers/: __init__.py  auth.py  items.py
tests/: __init__.py  test_auth.py  test_items.py
